unpackaged/main/default/objects/Bank_Information__c/Bank_Information__c.object-meta.xml
<CustomObject>
    <label>Bank Information</label>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>Bank Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>