unpackaged/main/default/objects/Bank_Information__c/fields/Bank_Account_Currency__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Currency__c</fullName>
    <inlineHelpText>Please choose the currency in which you would like the transfer to be made.</inlineHelpText>
    <label>Bank Account Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>