unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Account_Name__c</fullName>
    <inlineHelpText>Wire Transfer Account Name.</inlineHelpText>
    <label>Wire Transfer Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>