unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Account_Number__c</fullName>
    <inlineHelpText>Wire Transfer Account Number.</inlineHelpText>
    <label>Wire Transfer Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>