unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Bank_Address__c</fullName>
    <inlineHelpText>Wire Transfer Bank Address.</inlineHelpText>
    <label>Wire Transfer Bank Address</label>
    <type>TextArea</type>
</CustomField>