unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Bank_Code__c</fullName>
    <inlineHelpText>Wire Transfer Bank Code.</inlineHelpText>
    <label>Wire Transfer Bank Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>