unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Bank_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Bank_Contact_Name__c</fullName>
    <inlineHelpText>Wire Transfer Bank Contact Name.</inlineHelpText>
    <label>Wire Transfer Bank Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>