unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Bank_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Bank_Contact_Phone__c</fullName>
    <inlineHelpText>Wire Transfer Bank Contact Phone.</inlineHelpText>
    <label>Wire Transfer Bank Contact Phone</label>
    <type>Phone</type>
</CustomField>