unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Bank_Name__c</fullName>
    <inlineHelpText>Wire Transfer Bank Name.</inlineHelpText>
    <label>Wire Transfer Bank Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>