unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Inter_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Inter_Account_Number__c</fullName>
    <inlineHelpText>Account Number with Intermediary Bank</inlineHelpText>
    <label>Wire Transfer Inter. Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>