unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Inter_Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Inter_Bank_Address__c</fullName>
    <inlineHelpText>Address of the Intermediary Bank.</inlineHelpText>
    <label>Wire Transfer Inter. Bank Address</label>
    <type>TextArea</type>
</CustomField>