unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Inter_Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Inter_Bank_Code__c</fullName>
    <inlineHelpText>Intermediary Bank Code (SWIFT, ABA)</inlineHelpText>
    <label>Wire Transfer Inter. Bank Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>