unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Inter_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Inter_Bank_Name__c</fullName>
    <inlineHelpText>Name of the Intermediary Bank.</inlineHelpText>
    <label>Wire Transfer Inter. Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>