unpackaged/main/default/objects/Bank_Information__c/fields/Wire_Transfer_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Wire_Transfer_Special_Instructions__c</fullName>
    <inlineHelpText>Wire Transfer Special Instructions.</inlineHelpText>
    <label>Wire Transfer Special Instructions</label>
    <type>TextArea</type>
</CustomField>